# ros2bookcode

./: .gitignore  README.md
chapt1/: CMakeLists.txt  Makefile  cmake_install.cmake  hello_world.cpp  learn_cmake
chapt10/chapt10_ws/: pub5_sub5_2M.txt  shm.xml  topic_sub_limit.xml
chapt10/chapt10_ws/src/learn_compose/: CMakeLists.txt  package.xml
chapt10/chapt10_ws/src/learn_compose/include/learn_compose/: listener.hpp  talker.hpp
chapt10/chapt10_ws/src/learn_compose/src/: intra_process_pubsub.cpp  listener.cpp  talker.cpp
chapt10/chapt10_ws/src/learn_dds_cpp/: CMakeLists.txt  package.xml
chapt10/chapt10_ws/src/learn_dds_cpp/src/: shm_pub.cpp
chapt10/chapt10_ws/src/learn_executor_cpp/: CMakeLists.txt  package.xml
chapt10/chapt10_ws/src/learn_executor_cpp/src/: learn_executor.cpp
chapt10/chapt10_ws/src/learn_executor_py/: package.xml  setup.cfg  setup.py
chapt10/chapt10_ws/src/learn_executor_py/learn_executor_py/: learn_executor.py
chapt10/chapt10_ws/src/learn_lifecyclenode_cpp/: CMakeLists.txt  package.xml
chapt10/chapt10_ws/src/learn_lifecyclenode_cpp/src/: learn_lifecyclenode.cpp
chapt10/chapt10_ws/src/learn_lifecyclenode_py/: package.xml  setup.cfg  setup.py
chapt10/chapt10_ws/src/learn_lifecyclenode_py/learn_lifecyclenode_py/: learn_lifecyclenode.py
chapt10/chapt10_ws/src/learn_message_filter_cpp/: CMakeLists.txt  package.xml
chapt10/chapt10_ws/src/learn_message_filter_cpp/src/: timesync_test.cpp
chapt10/chapt10_ws/src/learn_message_filter_py/: package.xml  setup.cfg  setup.py
chapt10/chapt10_ws/src/learn_message_filter_py/learn_message_filter_py/: timesync_test.py
chapt10/chapt10_ws/src/learn_qos_cpp/: CMakeLists.txt  package.xml
chapt10/chapt10_ws/src/learn_qos_cpp/src/: reliability_test.cpp
chapt10/chapt10_ws/src/learn_qos_py/: package.xml  setup.cfg  setup.py
chapt10/chapt10_ws/src/learn_qos_py/learn_qos_py/: reliability_test.py
chapt10/rosbag2_message_filter/: metadata.yaml
chapt2/: CMakeLists1.txt  ros2_cpp_node.cpp  ros2_python_node.py
chapt2/chapt2_ws/: novel1.txt  novel2.txt  novel3.txt
chapt2/chapt2_ws/src/demo_cpp_pkg/: CMakeLists.txt  package.xml
chapt2/chapt2_ws/src/demo_cpp_pkg/src/: learn_auto.cpp  learn_function.cpp  learn_lambda.cpp  learn_shared_ptr.cpp  learn_thread.cpp  person_node.cpp
chapt2/chapt2_ws/src/demo_python_pkg/: package.xml  setup.cfg  setup.py
chapt2/chapt2_ws/src/demo_python_pkg/demo_python_pkg/: learn_thread.py  person_node.py  python_node.py  writer_node.py
chapt3/topic_practice_ws/src/status_display/: CMakeLists.txt  package.xml
chapt3/topic_practice_ws/src/status_display/src/: hello_qt.cpp  sys_status_display.cpp
chapt3/topic_practice_ws/src/status_interfaces/: CMakeLists.txt  package.xml
chapt3/topic_practice_ws/src/status_interfaces/msg/: SystemStatus.msg
chapt3/topic_practice_ws/src/status_publisher/: package.xml  setup.cfg  setup.py
chapt3/topic_practice_ws/src/status_publisher/status_publisher/: sys_status_pub.py
chapt3/topic_ws/src/demo_cpp_topic/: CMakeLists.txt  package.xml
chapt3/topic_ws/src/demo_cpp_topic/src/: turtle_circle.cpp  turtle_control.cpp
chapt3/topic_ws/src/demo_python_topic/: package.xml  setup.cfg  setup.py
chapt3/topic_ws/src/demo_python_topic/demo_python_topic/: novel_pub_node.py  novel_sub_node.py
chapt4/chapt4_ws/src/chapt4_interfaces/: CMakeLists.txt  package.xml
chapt4/chapt4_ws/src/chapt4_interfaces/srv/: FaceDetector.srv  Patrol.srv
chapt4/chapt4_ws/src/demo_cpp_service/: CMakeLists.txt  package.xml
chapt4/chapt4_ws/src/demo_cpp_service/launch/: demo.launch.py
chapt4/chapt4_ws/src/demo_cpp_service/src/: patrol_client.cpp  turtle_control.cpp
chapt4/chapt4_ws/src/demo_python_service/: package.xml  setup.cfg  setup.py
chapt4/chapt4_ws/src/demo_python_service/demo_python_service/: face_detect_client_node.py  face_detect_node.py  learn_face_detect.py
chapt5/: frames_2023-12-10_15.19.49.gv  rviz_tf.rviz
chapt5/chapt5_ws/src/demo_cpp_tf/: CMakeLists.txt  package.xml
chapt5/chapt5_ws/src/demo_cpp_tf/src/: dynamic_tf_broadcaster.cpp  static_tf_broadcaster.cpp  tf_listener.cpp
chapt5/chapt5_ws/src/demo_python_tf/: package.xml  setup.cfg  setup.py
chapt5/chapt5_ws/src/demo_python_tf/demo_python_tf/: dynamic_tf_broadcaster.py  static_tf_broadcaster.py  tf_listener.py
chapt5/learn_git/: CMakeLists.txt  package.xml
chapt5/rosbag2_2023_12_11-01_57_18/: metadata.yaml  rosbag2_2023_12_11-01_57_18_0.db3
chapt6/chapt6_ws/src/fishbot_description/: package.xml
chapt6/chapt6_ws/src/fishbot_description/config/: fishbot_ros2_controller.yaml
chapt6/chapt6_ws/src/fishbot_description/launch/: display_robot.launch.py  gazebo_sim.launch.py
chapt6/chapt6_ws/src/fishbot_description/urdf/: first_robot.urdf
chapt6/chapt6_ws/src/fishbot_description/world/: custom_room.world
chapt7/chapt7_ws/: README.md
chapt7/chapt7_ws/src/autopatrol_interfaces/: CMakeLists.txt
chapt7/chapt7_ws/src/autopatrol_robot/: setup.py
chapt7/chapt7_ws/src/fishbot_application_cpp/: CMakeLists.txt  package.xml
chapt7/chapt7_ws/src/fishbot_description/: CMakeLists.txt
chapt7/chapt7_ws/src/fishbot_navigation2/: CMakeLists.txt
chapt8/chapt8_ws/src/autopatrol_interfaces/: package.xml
chapt8/chapt8_ws/src/autopatrol_robot/: package.xml  setup.cfg
chapt8/chapt8_ws/src/fishbot_application/: package.xml  setup.cfg  setup.py
chapt8/chapt8_ws/src/nav2_custom_controller/: CMakeLists.txt  nav2_custom_controller.xml  package.xml
chapt8/chapt8_ws/src/nav2_custom_planner/: CMakeLists.txt  custom_planner_plugin.xml  package.xml
chapt8/chapt8_ws/src/nav2_custom_planner/include/nav2_custom_planner/: nav2_custom_planner.hpp
chapt8/chapt8_ws/src/nav2_custom_planner/src/: nav2_custom_planner.cpp
chapt8/learn_pluginlib/src/motion_control_system/: CMakeLists.txt  package.xml  spin_motion_plugins.xml
chapt9/fishbot_ws/src/fishbot_bringup/: CMakeLists.txt
chapt9/fishbot_ws/src/fishbot_description/: CMakeLists.txt  package.xml
chapt9/fishbot_ws/src/fishbot_navigation2/: CMakeLists.txt  package.xml
(+44 files in other folders)
